# bazel_subpkg

./: BUILD.bazel  Makefile  README.md  WORKSPACE  go.work  go_deps.bzl
cmd/: BUILD.bazel  go.mod  go.sum  main.go
pkg/: BUILD.bazel
pkg/abc/: BUILD.bazel  go.mod
pkg/abc/constants/: BUILD.bazel
pkg/abc/date/: BUILD.bazel  timezone.go
pkg/abc/nobuildfile/: hello.go
