load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

package(default_visibility = ["//visibility:public"])

# gazelle:prefix github.com/abitofhelp/bazel_subpkg
gazelle(name = "gazelle")

buildifier(
    name = "buildifier",
    lint_mode = "warn",
    mode = "check",
    #type = "auto",
    #format = "json",
    verbose = True,
)
