load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/abitofhelp/bazel_subpkg/cmd
# gazelle:exclude vendor
gazelle(name = "gazelle")

# gazelle:go_naming_convention import_alias
go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/abitofhelp/bazel_subpkg/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/abc/constants",
        "//pkg/abc/date",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
