load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:prefix github.com/abitofhelp/bazel_subpkg/pkg/abc
# gazelle:exclude vendor
gazelle(name = "gazelle")

go_library(
    name = "abc_lib",
    srcs = [
        "nobuildfile/hello.go",
        "//pkg/abc/constants:constants.go",
        "//pkg/abc/date:timezone.go",
    ],
    importpath = "github.com/abitofhelp/bazel_subpkg/pkg/abc",
    visibility = ["//visibility:public"],
)
