load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:prefix github.com/abitofhelp/bazel_subpkg/pkg/abc
# gazelle:exclude vendor
gazelle(name = "gazelle")

# gazelle:go_naming_convention import_alias
go_library(
    name = "abc",
    importpath = "github.com/abitofhelp/bazel_subpkg/pkg/abc",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/abc/constants:go_default_library",
        "//pkg/abc/date:go_default_library",
    ],
)
