load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/abitofhelp/bazel_subpkg/pkg/abc/date
# gazelle:exclude vendor
gazelle(name = "gazelle")

# gazelle:go_naming_convention import_alias
go_library(
    name = "date",
    srcs = ["timezone.go"],
    importpath = "github.com/abitofhelp/bazel_subpkg/pkg/abc/date",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":date",
    visibility = ["//visibility:public"],
)
